--- a/trunk/svn/faq.html
+++ b/trunk/svn/faq.html
@@ -818,8 +818,7 @@ access the repository.</p>
 
 
 <div class="h3" id="readonly" title="readonly">
-<h3>Why do read-only operations still need repository
-write access?</h3>
+<h3>为什么只读操作仍然需要对版本库的写权限？</h3>
 
 <p>Certain client operations are "read-only", like checkouts and
 updates.  From an access-control standpoint, Apache treats them as
