--- a/trunk/svn/tools_contrib.html
+++ b/trunk/svn/tools_contrib.html
@@ -298,13 +298,13 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="diff3wrap_bat"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/diff3wrap.bat">diff3wrap.bat</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Wrapper for running a diff3/merge program.</p>
+  <p>对diff3/merge程序的运行进行了一些封装.</p>
 
 
   <h3><a name="diffwrap_bat"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/diffwrap.bat">diffwrap.bat</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Wrapper for running a diff program.</p>
+  <p>对diff程序进行了封装.</p>
 
 
   <h3><a name="dsvn_el"
@@ -361,7 +361,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_graph_pl"
     href="http://svn.collab.net/repos/svn/trunk/tools/client-side/svn-graph.pl">svn-graph.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/client-side">tools/client-side</a>)</h3>
-  <p>Produce a GraphViz .dot graph for the branch history of a node.为某一个节点的分支修订历史生成一个名为GraphViz .dot的统计图。</p>
+  <p>为某一个节点的分支修订历史生成一个名为GraphViz .dot的统计图。</p>
 
 
   <h3><a name="svn_log_pl"
@@ -373,8 +373,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_push_c"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-push/svn-push.c">svn-push.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-push">contrib/client-side/svn-push</a>)</h3>
-  <p>Propagate changesets from one (networked) repository to a different
-     (networked) repository.
+  <p>将一个版本库(允许网络访问)的所有修改提交到另外一个版本库(允许网络访问).
   </p>
 
 
@@ -390,7 +389,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_viewdiff"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-viewdiff">svn-viewdiff</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>GNU diff wrapper for FileMerge.
+  <p>基于GNU协议的对FileMerge程序进行GNU diff wrapper for FileMerge.
   </p>
   <p>(FileMerge是Mac OS中X开发工具软件包中的一个图形化的比较工具。)
   </p>
@@ -468,8 +467,8 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svncopy_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/svncopy.pl.in">svncopy.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy">contrib/client-side/svncopy</a>)</h3>
-  <p>Utility script for copying with branching/tagging.用于分支和标记拷贝的应用脚本。</p>
-  <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/svncopy.README">svncopy.README</a>.</p>
+  <p>用于分支和标记拷贝的使用脚本。</p>
+  <p>参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/svncopy.README">svncopy.README</a>.</p>
   <p>相关文件：
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/testsvncopy.pl.in">testsvncopy.pl</a>
   </p>
@@ -491,14 +490,12 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="vc_svn_el"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/emacs/vc-svn.el">vc-svn.el</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side/emacs</a>)</h3>
-  <p>A VC backend for Subversion.
+  <p>支持Emacs VC的Subversion
   </p>
-  <p>Note that this one included in the Subversion tree is not the master
-     version.  The canonical vc-svn.el now lives in the FSF Emacs tree, at
-     <a href="http://savannah.gnu.org/cgi-bin/viewcvs/emacs/emacs/lisp/vc-svn.el">http://savannah.gnu.org/cgi-bin/viewcvs/emacs/emacs/lisp/vc-svn.el</a>.
-     The version here is maintained only because it is compatible with
-     older releases of Emacs, since the one in the FSF tree hasn't made it
-     into an official release of Emacs yet.
+  <p>需要注意的是,在SVN的版本目录下的vc_svn_el并不是主开发版本,
+  	最新的版本是放置在FSF Emacs版本目录下,可以通过
+     <a href="http://savannah.gnu.org/cgi-bin/viewcvs/emacs/emacs/lisp/vc-svn.el">http://savannah.gnu.org/cgi-bin/viewcvs/emacs/emacs/lisp/vc-svn.el</a>来访问.
+     这里的版本只是为了兼容以前旧版本的Emacs而维护的,因为FSF版本库中还没有将此文件打包到任何一个Emacs官方发行包中.
   </p>
 
 
@@ -545,24 +542,21 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="getsigs_pl"
     href="http://svn.collab.net/repos/svn/trunk/tools/dist/getsigs.pl">getsigs.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dist">tools/dist</a>)</h3>
-  <p>Terribly ugly hack of a script to verify the signatures on the release
-     tarballs and produce the list of who signed them in the format we use for
-     the announcements.
+  <p>这个脚本实现比较丑陋,它主要用来验证并获取发行的tar文件的签名,我们在声明中使用这些内容.
   </p>
 
 
   <h3><a name="gnuify_changelog_pl"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/gnuify-changelog.pl">gnuify-changelog.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>A script to munge the output of 'svn log' into something approaching the
-     style of a GNU ChangeLog.
+  <p>一个用来将svn的日志输出转换成GNU ChangeLog风格的脚本.
   </p>
 
 
   <h3><a name="graph_dav_servers_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/graph-dav-servers.py">graph-dav-servers.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>This was originally a quick hack to make a pretty picture of svn
+  <p>这原先是用来在svn的DAV服务器上生成一副不错的图片用的This was originally a quick hack to make a pretty picture of svn
      DAV servers.
   </p>
 
@@ -596,21 +590,19 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="mlpatch_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/mlpatch.py">mlpatch.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>Very annoyingly, the http://svn.haxx.se/ Subversion mailing list archives
-     mangle inline patches, and provide no raw message download facility
-     (other than for an entire month's email as an mbox).
-     So, I wrote this script, to demangle them. It's not perfect, as it has to
-     guess about whitespace, but it does an acceptable job.
+  <p>非常令人讨厌的是,http://svn.haxx.se/的Subversion邮件列表存档把内嵌的补丁弄得一团糟,
+  	并且不提供下载(除了存储整个月的邮件信息的mbox).
+  	因此我写了这个脚本,来把他们重新归整,这个脚本并不是很完美,它还得对一些空格进行猜测.
+  	但至少能够正常工作.
   </p>
 
 
   <h3><a name="normalize_dump_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/normalize-dump.py">normalize-dump.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>Reads a Subversion dumpfile from DUMPFILE (or, if not provided,
-     from stdin) and normalizes the metadata contained therein,
-     printing summarized and sorted information.  This is useful for
-     generating data about dumpfiles in a diffable fashion.
+  <p>读取Subversion的Dumpfile中(如果没有指定文件,则从标准输入设备中读取),
+  	然后格式化其中包含的所有元信息,并输出经过统计的,已排序的信息.
+  	这在生成不同样式的dumpfile方面比较有用.
   </p>
 
 
@@ -676,7 +668,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="trails_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/trails.py">trails.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>A program for analyzing Subversion trail usage statistics.一个用来分析subversion跟踪命令使用统计结果的程序。</p>
+  <p>一个用来分析subversion的跟踪命令使用情况统计结果的程序。</p>
 
 
   <h3><a name="verify_history_py"
@@ -739,11 +731,9 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="check_mime_type_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts/check-mime-type.pl">check-mime-type.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts">contrib/hook-scripts</a>)</h3>
-  <p>Check that every added file has the svn:mime-type property set
-     and every added file with a mime-type matching text/* also has
-     svn:eol-style set. If any file fails this test the user is sent
-     a verbose error message suggesting solutions and the commit is
-     aborted.
+  <p>检查每个新增加的文件是否都设置了svn:mime-type属性,
+  	如果文件的svn:mime-type属性值匹配text/*模式的话,那么该文件必须同时设置svn:eol-style属性.
+  	如果任一文件没有通过检查,则返回详细的错误信息给用户,并给出建议的解决方案,并且中止当前提交动作.
   </p>
 
 
@@ -872,7 +862,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="po_update_sh"
     href="http://svn.collab.net/repos/svn/trunk/tools/po/po-update.sh">po-update.sh</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/po">tools/po</a>)</h3>
-  <p>Script to generate Subversion pot files and update locales.该脚本讲生成subversion的pot文件，同时更新本地的。</p>
+  <p>该脚本讲生成subversion的pot文件，同时更新本地的。</p>
 
 </div>
 
@@ -914,9 +904,8 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_backup_dumps_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/server-side/svn-backup-dumps.py">svn-backup-dumps.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/server-side">tools/server-side</a>)</h3>
-  <p>This script creates (incremental) dump files from a subversion
-     repository on *IX and Windows. It is intended for use in cron jobs and
-     post-commit hooks.
+  <p>这个脚本用于从Windows和类Unix系统上的SVN版本库中创建一些增量的输出文件,
+  	这个脚本主要用在执行一些定时的计划任务,还有post-commit钩子脚本中.
   </p>
 
 
