--- a/trunk/svn/tools_contrib.html
+++ b/trunk/svn/tools_contrib.html
@@ -893,8 +893,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svnmirror_sh"
     href="http://svn.collab.net/repos/svn/trunk/contrib/server-side/svnmirror.sh">svnmirror.sh</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/server-side">contrib/server-side</a>)</h3>
-  <p>为subversion版本库做一个镜像。这个脚本支持通过ssh和svn工具
-     来发送修改到其他版本库或从其他版本库获取最新的修改。
+  <p>为subversion版本库做一个镜像。这个脚本支持通过ssh和svn工具来发送修改到其他版本库或从其他版本库获取最新的修改。
   </p>
 </div>
 
